--- a/front-end/public/stylesheets/search.css
+++ b/front-end/public/stylesheets/search.css
@@ -76,3 +76,7 @@
   box-shadow: 0px 0px 3px white;
   color: #fde74c;
 }
+
+#noResults {
+  padding: 40px;
+}
